# svd_codegen

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: package.ps1  package.sh  run.sh
src/: lib.rs  main.rs
