[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>", "Philipp Oppermann <dev@phil-opp.com>"]
build = "build.rs"
description = "Generate Rust register maps (`struct`s) from SVD files"
documentation = "https://docs.rs/svd_codegen"
keywords = ["arm", "cortex-m", "register", "map", "generator"]
license = "MIT OR Apache-2.0"
name = "svd_codegen"
repository = "https://github.com/embed-rs/svd_codegen"
version = "0.2.0"

[dependencies]
clap = "2.14.0"
inflections = "1.0.0"
quote = "0.3.3"
svd-parser = "0.1.1"
syn = "0.9"
